--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,12 @@ dependencies {
 
     //coil
     implementation "io.coil-kt:coil-compose:2.1.0"
+
+    //palette
+    implementation "androidx.palette:palette:1.0.0"
+
+    //pager
+    implementation "com.google.accompanist:accompanist-pager:0.24.9-beta"
 }
 
 kapt {
